feat: Update app title and logo
The application title has been updated to "télécharger données topographique Maroc ©" and the associated logo has been changed to a generic cross icon. This aligns with a shift in focus for the application's branding.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CadGIS Maroc</title>
-    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/sigtopo/cadgisMaroc/refs/heads/main/cad-setting-2-opposite.png">
+    <title>télécharger données topographique Maroc ©</title>
+    <link rel="icon" type="image/png" href="https://p7.hiclipart.com/preview/838/297/128/computer-icons-check-mark-cross-clip-art-x-thumbnail.jpg">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v7.4.0/ol.css">
     <script src="https://cdn.jsdelivr.net/npm/ol@v7.4.0/dist/ol.js"></script>
