feat: Update website favicon
Replaces the generic "x" favicon with the ArcGIS for AutoCAD logo to better reflect the application's nature.

--- a/cadgisMaroc-main/index.html
+++ b/cadgisMaroc-main/index.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CadGIS Maroc</title>
-    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/sigtopo/cadgisMaroc/refs/heads/main/cad-setting-2-opposite.png">
+    <link rel="icon" type="image/png" href="https://www.esrifrance.fr/content/dam/distributor-share/esrifrance-fr/produits/en-savoir-plus/produits-apps/arcgis-for-autocad/vue-d%27ensemble/arcgis-for-autocad-220.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v7.4.0/ol.css">
     <script src="https://cdn.jsdelivr.net/npm/ol@v7.4.0/dist/ol.js"></script>
